--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     {% load static %}
     <link href="{% static 'css/forms.css' %}" rel="stylesheet">
+    <link href="{% static 'css/custom-colors.css' %}" rel="stylesheet">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
