--- a/templates/guardian/base_guardian.html
+++ b/templates/guardian/base_guardian.html
@@ -296,9 +296,12 @@
                 </div>
             </div>
             <div class="mt-2">
-                <a href="{% url 'users:logout' %}" class="btn btn-outline-light btn-sm w-100">
-                    <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
-                </a>
+                <form method="post" action="{% url 'users:logout' %}" class="d-inline w-100">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-light btn-sm w-100">
+                            <i class="bi bi-box-arrow-right"></i> Cerrar Sesión
+                        </button>
+                    </form>
             </div>
         </div>
     </nav>
