--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -235,12 +235,12 @@
                     </a>
                 </div>
                 <div class="col-md-3 mb-2">
-                    <a href="{% url 'admin_sponsors' %}" class="btn btn-outline-success w-100">
+                    <a href="{% url 'admin_panel:admin_sponsors' %}" class="btn btn-outline-success w-100">
                         <i class="bi bi-building me-2"></i>Gestionar Auspiciadores
                     </a>
                 </div>
                 <div class="col-md-3 mb-2">
-                    <a href="{% url 'admin_player_cards' %}" class="btn btn-outline-info w-100">
+                    <a href="{% url 'admin_panel:admin_player_cards' %}" class="btn btn-outline-info w-100">
                         <i class="bi bi-person-badge me-2"></i>Fichas de Jugadores
                     </a>
                 </div>
