--- a/templates/admin/sponsors.html
+++ b/templates/admin/sponsors.html
@@ -30,7 +30,7 @@
                             <button type="submit" class="btn btn-outline-primary me-2">
                                 <i class="bi bi-funnel me-2"></i>Filtrar
                             </button>
-                            <a href="{% url 'admin_sponsors' %}" class="btn btn-outline-secondary">
+                            <a href="{% url 'admin_panel:admin_sponsors' %}" class="btn btn-outline-secondary">
                                 <i class="bi bi-x-circle me-2"></i>Limpiar
                             </a>
                         </div>
