--- a/templates/pages/schedule.html
+++ b/templates/pages/schedule.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Calendario - Club Deportes Puerto Montt{% endblock %}
+{% block title %}Calendario - CEB FEM{% endblock %}
 
 {% block content %}
 <div class="container-fluid p-0">
@@ -106,7 +106,7 @@
                                     <div class="team-logo mb-2">
                                         <i class="fas fa-shield-alt text-primary" style="font-size: 3rem;"></i>
                                     </div>
-                                    <h6 class="mb-0">Deportes Puerto Montt</h6>
+                                    <h6 class="mb-0">CEB FEM</h6>
                                     <small class="text-muted">Local</small>
                                 </div>
                                 <div class="col-4">
