--- a/templates/guardian/pay_quota.html
+++ b/templates/guardian/pay_quota.html
@@ -109,7 +109,7 @@
                                     <p class="mb-1"><strong>Banco:</strong> Banco Estado</p>
                                     <p class="mb-1"><strong>Cuenta Corriente:</strong> 12345678-9</p>
                                     <p class="mb-1"><strong>RUT:</strong> 12.345.678-9</p>
-                                    <p class="mb-0"><strong>Titular:</strong> Club Deportes Puerto Montt</p>
+                                    <p class="mb-0"><strong>Titular:</strong> CEB FEM</p>
                                 </div>
 
                                 <div class="mb-4">
