--- a/templates/pages/teams.html
+++ b/templates/pages/teams.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Equipos - Club Deportes Puerto Montt{% endblock %}
+{% block title %}Equipos - CEB FEM{% endblock %}
 
 {% block content %}
 <div class="container-fluid p-0">
