--- a/templates/base.html
+++ b/templates/base.html
@@ -96,11 +96,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5><i class="fas fa-futbol me-2"></i>CEBPm</h5>
+                    <h5><i class="fas fa-basketball-ball me-2"></i>CEBPm</h5>
                     <p class="mb-0">Formando campeones desde 1950</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">&copy; 2025 CEBPm. Todos los derechos reservados.</p>
+                    <p class="mb-0">&copy; {% now "Y" %} CEBPm. Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
