docs: update sport references from football to basketball

--- a/templates/admin/communications.html
+++ b/templates/admin/communications.html
@@ -290,7 +290,7 @@
                             <option value="sub_19">Sub 19</option>
                             <option value="sub_17">Sub 17</option>
                             <option value="sub_15">Sub 15</option>
-                            <option value="escuela">Escuela de Fútbol</option>
+                            <option value="escuela">Escuela de Básquet</option>
                         </select>
                     </div>
                     
