--- a/templates/pages/schedule.html
+++ b/templates/pages/schedule.html
@@ -39,7 +39,7 @@
                                         <option value="sub19">Sub 19</option>
                                         <option value="sub17">Sub 17</option>
                                         <option value="sub15">Sub 15</option>
-                                        <option value="escuela">Escuela de Fútbol</option>
+                                        <option value="escuela">Escuela de Básquet</option>
                                     </select>
                                 </div>
                                 <div class="col-md-3">
@@ -229,7 +229,7 @@
                 <div class="col-lg-4">
                     <div class="card border-0 shadow">
                         <div class="card-header bg-warning text-dark">
-                            <h5 class="mb-0">Escuela de Fútbol</h5>
+                            <h5 class="mb-0">Escuela de Básquet</h5>
                         </div>
                         <div class="card-body">
                             <div class="training-schedule">
