--- a/templates/pages/teams.html
+++ b/templates/pages/teams.html
@@ -36,7 +36,7 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <h6 class="text-muted mb-3">Plantel Profesional</h6>
-                                    <p class="mb-3">Nuestro equipo principal compite en la Primera B del fútbol chileno, representando con orgullo los colores de Puerto Montt.</p>
+                                    <p class="mb-3">Nuestro equipo principal compite en la Primera B del Básquet chileno, representando con orgullo los colores de Puerto Montt.</p>
                                     <ul class="list-unstyled">
                                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Jugadores: 25</li>
                                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Cuerpo Técnico: 8</li>
@@ -63,7 +63,7 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <h6 class="text-muted mb-3">Formación Avanzada</h6>
-                                    <p class="mb-3">Jugadores en proceso de transición al fútbol profesional, con entrenamientos de alto nivel.</p>
+                                    <p class="mb-3">Jugadores en proceso de transición al Básquet profesional, con entrenamientos de alto nivel.</p>
                                     <ul class="list-unstyled">
                                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Jugadores: 22</li>
                                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Entrenadores: 3</li>
@@ -144,7 +144,7 @@
                             <div class="row">
                                 <div class="col-md-8">
                                     <h6 class="text-muted mb-3">Infantiles</h6>
-                                    <p class="mb-3">Iniciación al fútbol competitivo con metodologías adaptadas a la edad.</p>
+                                    <p class="mb-3">Iniciación al Básquet competitivo con metodologías adaptadas a la edad.</p>
                                     <ul class="list-unstyled">
                                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Jugadores: 16</li>
                                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Entrenadores: 2</li>
@@ -161,11 +161,11 @@
                     </div>
                 </div>
 
-                <!-- Escuela de Fútbol -->
+                <!-- Escuela de Básquet -->
                 <div class="col-lg-6">
                     <div class="card h-100 shadow-lg border-0">
                         <div class="card-header bg-danger text-white">
-                            <h4 class="mb-0"><i class="fas fa-school me-2"></i>Escuela de Fútbol</h4>
+                            <h4 class="mb-0"><i class="fas fa-school me-2"></i>Escuela de Básquet</h4>
                         </div>
                         <div class="card-body">
                             <div class="row">
