--- a/templates/admin/registrations.html
+++ b/templates/admin/registrations.html
@@ -32,7 +32,7 @@
             <option value="sub_19">Sub 19</option>
             <option value="sub_17">Sub 17</option>
             <option value="sub_15">Sub 15</option>
-            <option value="escuela">Escuela de Fútbol</option>
+            <option value="escuela">Escuela de Básquet</option>
         </select>
     </div>
     <div class="col-md-4">
